# Beaglebone_UART

./: README.md
uart_comm/: CMakeLists.txt  package.xml
uart_comm/arduino/: platformio.ini
uart_comm/arduino/src/: teensy_read.ino
uart_comm/scripts/: uart_hello.py  uart_hello2.py
