<?xml version="1.0"?>
<package>
  <name>uart_comm</name>
  <version>0.0.0</version>
  <description>The uart_comm package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_python</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_python</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
